<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SubSpectrum</string>
    <string name="action_settings">Settings</string>
	<string name="start_processing">Start</string>
	<string name="play">Play</string>
	<string name="stop">Stop</string>
	<string name="denoised">Denoised</string>
	<string name="end">End</string>
	<string name="title_text">Basic Sub-Spectrum Demo Program</string>
</resources>